--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,7 @@ button {
 
 .overlay-box {
     position: relative;
+    overflow: hidden;
 }
 
 .overlay-text {
@@ -421,15 +422,17 @@ button {
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    transform: translateY (100%);
+    transform: translateY(100%);
     transition: translateY 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overlay-text{
-    transform: translateY (0%);
+    transform: translateY(0%);
 }
 
-.portfolio-img {}
+.portfolio-img {
+    overflow: hidden;
+}
 
 .iner-two {
     padding: 32px 16px;
