--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,8 @@ button {
     padding-bottom: 32px;
     margin-bottom: 48px;
     background-color: #FFFFFF;
+    border: 1px solid #F4F4FD;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .overlay-box {
@@ -411,6 +413,9 @@ button {
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
+    width: 100%;
+    padding: 40px 32px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -418,15 +423,13 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    padding: 40px 32px;
     background-color: #4d5ae5;
-    width: 100%;
-    height: 100%;
     transform: translateY(100%);
-    transition: translateY 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .overlay-text{
+.portfolio-item:hover .overlay-text {
+    
     transform: translateY(0%);
 }
 
@@ -463,7 +466,7 @@ button {
     background-color: #2E2F42;
 }
 
-.box-logo-footer{
+.box-logo-footer {
     margin-top: 100px;
     margin-left: 156px;
 }
@@ -480,18 +483,18 @@ button {
     color: #F4F4FD;
 }
 
-.footer-socials{
+.footer-socials {
     display: block;
     margin-top: 100px;
     margin-bottom: 132px;
     margin-left: 120px;
 }
 
-.footer-socials-title{
+.footer-socials-title {
     font-weight: 500;
     color: #fff;
     margin-bottom: 16px;
-    
+
 }
 
 .footer-socials-list {
@@ -515,6 +518,6 @@ button {
 }
 
 .footer .socials-link:hover,
-  .footer .socials-link:focus{
-    background-color:#31D0AA;
-  }
+.footer .socials-link:focus {
+    background-color: #31D0AA;
+}
