--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ button {
 .header {
     padding: 0 15px;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .container-header {
@@ -109,6 +110,11 @@ button {
     color: #404BBF;
 }
 
+.nav-link.studio {
+    position: relative;
+    color: #404bbf;
+}
+
 .nav-link.studio::after {
     content: '';
     position: absolute;
@@ -118,6 +124,7 @@ button {
     border-radius: 2px;
     background-color: #404BBF;
     margin-top: 20px;
+    bottom: -1px;
 }
 
 .adres {
@@ -157,6 +164,8 @@ button {
 /* HERO */
 
 .hero {
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.70),
             rgba(46, 47, 66, 0.70)),
@@ -244,6 +253,9 @@ button {
 }
 
 .strategic-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 264px;
     height: 112px;
     flex-shrink: 0;
@@ -254,12 +266,7 @@ button {
     margin-bottom: 8px;
 }
 
-.strategic-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+.strategic-icon {}
 
 
 .title-secondary {
@@ -339,22 +346,23 @@ button {
     text-align: center;
 }
 
+.socials-item {}
+
 .socials-list {
     display: flex;
     width: 232px;
-    justify-content: center;
-    align-items: center;
     gap: 24px;
     margin-top: 8px;
     margin-left: 16px;
 }
 
-.socials-item {}
 
 .socials-link {
     display: flex;
     width: 40px;
     height: 40px;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
     background-color: #4D5AE5;
     position: relative;
@@ -370,9 +378,6 @@ button {
 
 .social-icon {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     fill: currentColor;
 }
 
@@ -425,11 +430,11 @@ button {
     color: #f4f4fd;
     background-color: #4d5ae5;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overlay-text {
-    
+
     transform: translateY(0%);
 }
 
@@ -464,11 +469,13 @@ button {
 .container-footer {
     display: flex;
     background-color: #2E2F42;
+    align-items: baseline
 }
 
 .box-logo-footer {
     margin-top: 100px;
     margin-left: 156px;
+    margin-right: 120px;
 }
 
 .logo-footer {
@@ -487,7 +494,7 @@ button {
     display: block;
     margin-top: 100px;
     margin-bottom: 132px;
-    margin-left: 120px;
+    
 }
 
 .footer-socials-title {
@@ -500,15 +507,15 @@ button {
 .footer-socials-list {
     display: flex;
     width: 208px;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
+    gap: 16px;
 }
 
 .footer-socials-link {
     display: flex;
     width: 40px;
     height: 40px;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
     background-color: #4D5AE5;
     position: relative;
