--- a/css/styles.css
+++ b/css/styles.css
@@ -354,6 +354,7 @@ button {
     gap: 24px;
     margin-top: 8px;
     margin-left: 16px;
+    justify-content: center;
 }
 
 
@@ -407,6 +408,7 @@ button {
     background-color: #FFFFFF;
     border: 1px solid #F4F4FD;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-box {
@@ -430,7 +432,7 @@ button {
     color: #f4f4fd;
     background-color: #4d5ae5;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overlay-text {
@@ -494,7 +496,7 @@ button {
     display: block;
     margin-top: 100px;
     margin-bottom: 132px;
-    
+
 }
 
 .footer-socials-title {
